update socials, readme

--- a/prod/index.html
+++ b/prod/index.html
@@ -43,7 +43,14 @@
 							<input class="popup-form__input" type="text" name="event" data-name="Site search" value="Site search">
 							<button class="popup-form__submit" type="submit" name="submit-hidden" value="" style="display: none;"></button>
 						</form>
-						<div class="popup-socials"><a class="popup-socials__link" href=""></a></div>
+						<div class="popup-socials">
+							<li class="popup-socials__item"><a class="popup-socials__link popup-socials__link_tw" href="https://google.com" target="_blank"></a></li>
+							<li class="popup-socials__item"><a class="popup-socials__link popup-socials__link_fb" href="https://google.com" target="_blank"></a></li>
+							<li class="popup-socials__item"><a class="popup-socials__link popup-socials__link_google" href="https://google.com" target="_blank"></a></li>
+							<li class="popup-socials__item"><a class="popup-socials__link popup-socials__link_in" href="https://google.com" target="_blank"></a></li>
+							<li class="popup-socials__item"><a class="popup-socials__link popup-socials__link_mail" href="https://google.com" target="_blank"></a></li>
+							<li class="popup-socials__item"><a class="popup-socials__link popup-socials__link_rss" href="https://google.com" target="_blank"></a></li>
+						</div>
 					</div>
 				</header>
 				<section class="main-content"></section>
